Fix scroll on small screens

--- a/css/jquery.treeView.css
+++ b/css/jquery.treeView.css
@@ -2,7 +2,7 @@
 
 .treeview, .treeview ul {
 	list-style-type: none;
-	overflow: scroll;
+	overflow: hidden;
 }
 
 .treeview li {
